<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.login.SignInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/top_layout_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/welcome_singin"
                android:layout_marginStart="20dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="21sp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            style="@style/LoginTextInputOuterFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:boxStrokeColor="@color/bottom_bg"
            app:hintTextColor="@color/bottom_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="125dp"
            app:layout_constraintTop_toBottomOf="@+id/top_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEt"
                style="@style/LoginTextInputInnerFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type_your_email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            style="@style/LoginTextInputOuterFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            app:boxStrokeColor="@color/bottom_bg"
            app:hintTextColor="@color/bottom_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailLayout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passET"
                style="@style/LoginTextInputInnerFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type_your_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@color/bottom_bg"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@drawable/more_bg"
            android:elevation="2dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="13sp"
            android:gravity="center"
            android:text="@string/not_registered"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>