<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.detail.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/bottom_unselect">

            <TextView
                android:id="@+id/coin_detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/coin_detail"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="23sp"/>

            <ImageView
                android:id="@+id/favorite_button"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/favorite_unselected_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/coin_title_underline"
                android:scaleType="fitCenter"/>

            <View
                android:id="@+id/coin_title_underline"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@+id/coin_detail_title"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"/>
            <ImageView
                android:id="@+id/detail_coin_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:layout_constraintTop_toBottomOf="@+id/coin_title_underline"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/detail_coin_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/coin_title_underline"
                app:layout_constraintStart_toEndOf="@+id/detail_coin_image"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="19sp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/detail_coin_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/detail_coin_name"
                app:layout_constraintStart_toEndOf="@+id/detail_coin_image"
                android:layout_margin="10dp"
                android:textSize="15sp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/detail_coin_status_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/coin_title_underline"
                app:layout_constraintEnd_toStartOf="@+id/detail_coin_status"
                android:layout_margin="10dp"
                android:text="@string/current_price"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/detail_coin_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/coin_title_underline"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="10dp"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/detail_coin_high_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/detail_coin_status"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/detail_coin_high_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/detail_coin_high"
                    android:text="@string/highest_24h"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/detail_coin_high"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textSize="17sp"
                    android:textColor="@color/white"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/detail_coin_low_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/detail_coin_high_layout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/detail_coin_low_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/detail_coin_low"
                    android:text="@string/lowest_24h"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/detail_coin_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textSize="17sp"
                    android:textColor="@color/white"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/top_layout"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/hashing_algorithm_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textStyle="bold"
                android:text="@string/hashing_algorithm"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/hashing_algorithm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/hashing_algorithm_title"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"/>
            <View
                android:id="@+id/hashing_underline"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@+id/hashing_algorithm"
                android:layout_marginTop="10dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="15dp"
                android:background="@color/bottom_bg"/>
            <TextView
                android:id="@+id/refresh_interval_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/hashing_underline"
                app:layout_constraintStart_toStartOf="parent"
                android:textStyle="bold"
                android:text="@string/refresh_interval"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/refresh_interval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/refresh_interval_title"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"/>
            <View
                android:id="@+id/refresh_interval_underline"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@+id/refresh_interval"
                android:layout_marginTop="10dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="15dp"
                android:background="@color/bottom_bg"/>

            <TextView
                android:id="@+id/description_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/refresh_interval_underline"
                app:layout_constraintStart_toStartOf="parent"
                android:textStyle="bold"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_margin="10dp"/>
            <ScrollView
                android:id="@+id/description_scrollView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/description_title"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp">
                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:text=""/>
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/detail_error_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/error"
            android:scaleType="fitCenter"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ProgressBar
            android:id="@+id/detail_progressBar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:indeterminateTint="@color/bottom_bg"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>