<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    android:layout_margin="5dp"
    android:elevation="5dp"
    app:cardBackgroundColor="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <ImageView
            android:id="@+id/coin_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/coin_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/coin_image"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/coin_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/coin_name"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/coin_status"
            android:layout_width="100dp"
            android:layout_height="25dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15sp"
            android:gravity="center"
            android:background="@drawable/coin_up"/>

        <TextView
            android:id="@+id/more_text"
            android:layout_width="60dp"
            android:layout_height="20dp"
            app:layout_constraintTop_toBottomOf="@+id/coin_name"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/more_bg"
            android:text="@string/more"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="14sp"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/more_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/coin_symbol"
            android:layout_margin="10dp"
            android:visibility="gone">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@color/bottom_bg"/>

            <TextView
                android:id="@+id/highest_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/highest_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/highest_value"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="10dp"
                android:text="@string/highest_day"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/lowest_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/lowest_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/lowest_value"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/lowest_day"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/change_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/change_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/change_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/change_value"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/change_day"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>